--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "Java Database Connector/Java Database Connector/lib/mysql-connector-java.jar",
+        "/home/csr/Downloads/mysql-connector-j-9.2.0/mysql-connector-j-9.2.0.jar"
+    ]
 }
