--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "Java Database Connector/Java Database Connector/lib/mysql-connector-java.jar",
         "/home/csr/Downloads/mysql-connector-j-9.2.0/mysql-connector-j-9.2.0.jar"
     ],
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "java.compile.nullAnalysis.mode": "automatic"
 }
